--- a/app/views/preferences/preferences-scene.html
+++ b/app/views/preferences/preferences-scene.html
@@ -18,7 +18,7 @@
 					<div id="theme" x-mojo-element="ListSelector"></div>
 				</div>
 			</div>
-			<div class="palm-row last">
+		<!--	<div class="palm-row last">
 				<div class="palm-row-wrapper">
 					<div class="label left">Auto Save</div>
 					<div id="autoSave" x-mojo-element="ToggleButton"></div>
@@ -30,7 +30,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 	
 	<div class="palm-group" id="secretPreferences">
 		<div class="palm-group-title" id="secret-stuff">Secret Stuff</div>
