--- a/app/views/main/main-scene.html
+++ b/app/views/main/main-scene.html
@@ -7,7 +7,7 @@
 		<div class="palm-page-header-wrapper">
 			<div class="icon"></div>
 			<div class="title main">
-				<span id="main-title">Save/Restore</span>
+				<span id="main-title">Uffdah</span>
 				<span class="version" id="version">v0.0.0</span>
 			</div>
 			<div class="title sub" id="subTitle">The Open Source Solution</div>
