--- a/stylesheets/uffdah.css
+++ b/stylesheets/uffdah.css
@@ -377,3 +377,26 @@ body.palm-dark .app-list .group-source
   -webkit-box-sizing: border-box;
   position: absolute;
 }
+/*
+ * Config/Feed Scene Styles
+ */
+.configs #confList .toggle-text
+{
+	float: right;
+}
+.configs #confList .title.sub
+{
+	color: #999;
+	padding-top: 0px;
+	padding-left: 16px;
+	padding-right: 10px;
+	margin-top: -5px;
+	font-size: 14px;
+}
+.configs #confList .disabled,
+.configs #confList .disabled *,
+.configs .palm-group.disabled
+{
+	opacity: 0.35;
+}
+
